style.css
/* styles.css */

/* background*/

*{
    margin: 0px;
    padding: 0px;

}
body{
    /*background-image: linear-gradient(to bottom, #83898d, #c5c4c4);*/
    background-attachment: fixed;
    font-family: sans-serif;
    text-align: center;
}


.social-icons {
    margin: 0 10px;
    font-size: 30px; /* Set size of the icons */
    color: #0077b5; /* Blue color for LinkedIn and GitHub */
    position: relative;
}


/*Navbar settings */

.navbar {
    background-color: #1a1a1b;
    position: relative; /*check this*/
    /*display: flex;
    justify-content: center;*/
    margin-bottom: 40px;
}

.navbar .nav-list {
    display: flex;
    list-style: none;
    margin: 0px;
    padding: 0px;
    justify-content: center;
}
/*
.navbar ul li{
    display: inline-block;
    position:relative;
}
*/

.navbar a{
    /*margin-right: 38px;*/
    text-decoration: none;
    color: white;
    /*display: block;*/
    display: inline-block;
    padding: 20px;
    text-align: center;
    width: 80px;

}

.navbar a:hover{
    color: white;
    background-color: rgb(105, 87, 123);
}


.navbar a.active{
    background-color: rgb(53, 35, 90);
    color: white;
}

.navbar .hamburger-toggle{
    color: white;
    font-size: 25px;
    display:none;
    padding: 15px;
}

.navbar .hamburger-toggle .x{
    display:none;
}


.navbar .hamburger-toggle:hover{
    color: white;
    background-color: rgb(105, 87, 123);
}

/* For mobile device viewing*/

@media screen and (max-width: 768px) {

    .navbar.open .nav-list{
        display: block;
        position: static;
        top: 400px;
        left: 0;
        flex-direction: column;
        width: 100%;
        text-align: center;
        background-color:#1a1a1b;
    }

    .navbar.open a {
        display: block;
        padding-left: 0px; 
        padding-right: 0px;
        width: 100%;
        text-align: center;
    }

    .navbar .hamburger-toggle{
        display: block;
    }

    .navbar.open .hamburger-toggle .x{
        display: block;
        
    }

    .navbar.open .hamburger-toggle .hamburger{
        display: none;
        padding: 10px;
    }

    .navbar .nav-list{
        display:none;
    }

    /*Media for the split screen stacking */
    .container {
        flex-direction: column; /* Stack items on mobile */
        
    }
    .container .left-column {
        padding-right: 0px; /* Remove padding on mobile */
        padding-left: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        margin-bottom: 30px; /* Add some space between the columns */
    }
    .right-column {
        margin-top: 40px; /* Add some space between the columns */
    }
}


/*Top Banner */
.banner-area {
    background-image: url("imgs/better_background.jpeg");
    background-size: cover;
    background-position: center ;
    background-attachment: local; 
    top: 0px;
    height: 200px;
    position: relative;
    width: 100%;
    padding-top: 75px;
}

.banner-area::after{
    content: "";
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
    display: block;
    background-color: #211f56;
    opacity: 0.5;
    z-index:1;
}
.banner-area{
    position:relative;
}

.banner-area .bold-title-h1 {
    /*font-weight: bold;*/
    text-align: center;
    font-size: 80px !important; /* Optional: Adjust size as needed */
    position: relative;
    color: white;
    font-family: baskerville, serif;
    z-index: 10;
}





/*Content for this home section */
.content{
    margin: 10%; 
    position: relative;
    background: white;
    /*top: 500px;
}

.content h2.bold-title-h2 {
    font-weight: bold;
    text-align: center;
    font-size: 40px; /* Optional: Adjust size as needed */
}

.content p{
    padding: 2% 0;
    line-height: 30px;
    text-align: justify;
    
}

/* Style for Split Screen body */

.container {
    display: flex;
    justify-content: space-between;
    padding: 0px;
    margin-top: -40px;
}

.left-column {
    flex: 1;
    padding-right: 40px;
    padding-left: 10px;
    margin-right: 0px;
    margin-left: -45px;
}

.profile-picture {
    width: 100%; /* Makes the picture responsive */
    max-width: 200px; /* Sets a max width for the picture */
    border-radius: 50%; /* Makes the picture circular */   
    margin-top: 30px;
}

.left-column .contact {
    margin-top: 7px;
}

.socials {
    margin-top: 10px;
}

.socials a {
    display: inline-block;
    margin-right: 10px;
    margin-left: 10px;
    text-decoration: none;
    color: rgb(0, 0, 14);
    font-size: 25px;
}

.right-column {
    flex: 2;
}



/* CSS For the CV Tab */

